Ajuste Classe Envio E-mail Service
Ajuste código que envia e-mail da solicitação de compra.