@@ -4,25 +4,29 @@ import br.com.codex.v1.domain.cadastros.Usuario;
 import br.com.codex.v1.domain.dto.SolicitacaoCompraDto;
 import br.com.codex.v1.domain.repository.UsuarioRepository;
 import br.com.codex.v1.utilitario.EmailService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Service;
+import org.springframework.util.FileCopyUtils;
 
 import javax.mail.internet.MimeMessage;
 
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.time.format.DateTimeFormatter;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static org.reflections.Reflections.log;
+import java.util.Map;
 
 @Service
 public class EnviaEmailService implements EmailService {
+    private static final Logger logger = LoggerFactory.getLogger(EnviaEmailService.class);
 
     @Autowired
     private JavaMailSender javaMailSender;
@@ -34,9 +38,49 @@ public class EnviaEmailService implements EmailService {
     private String remetente;
 
     private static final String NOME_DEPARTAMENTO = "Compras";
-    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+
+    private String carregarTemplate(String nomeArquivo) {
+
+        try {
+            ClassPathResource resource = new ClassPathResource("/email_templates/" + nomeArquivo);
+            InputStream inputStream = resource.getInputStream();
+            byte[] bdata = FileCopyUtils.copyToByteArray(inputStream);
+            return new String(bdata, StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            throw new RuntimeException("Erro ao carregar template: " + nomeArquivo, e);
+        }
+    }
+
+    private String processarTemplate(String template, Map<String, Object> variaveis) {
+        String resultado = template;
+
+        for (Map.Entry<String, Object> entry : variaveis.entrySet()) {
+            String chave = "{{" + entry.getKey() + "}}";
+            String valor = entry.getValue() != null ? entry.getValue().toString() : "";
+            resultado = resultado.replace(chave, valor);
+        }
+
+        // Processar condicionais
+        if (variaveis.containsKey("urgente") && Boolean.TRUE.equals(variaveis.get("urgente"))) {
+            resultado = resultado.replace("{{#urgente}}", "").replace("{{/urgente}}", "");
+        } else {
+            resultado = resultado.replaceAll("\\{\\{#urgente\\}\\}[\\s\\S]*?\\{\\{/urgente\\}\\}", "");
+        }
+
+        // Processar filtros personalizados
+        resultado = resultado.replace(" | emailCodex", "");
+
+        return resultado;
+    }
 
     public String sendSimpleMail(SolicitacaoCompraDto solicitacaoCompraDto) {
+
+        String dataFormatada = "";
+        int emailsEnviados = 0;
+        int emailsComErro = 0;
+        StringBuilder resultado = new StringBuilder();
+
+        String subject = "Notificação Solicitação de Compra " + " - " + solicitacaoCompraDto.getSolicitante() + " realizou uma solicitação de compra";
 
         try {
             List<Usuario> usuariosCompradores = usuarioRepository.findByDepartamento(NOME_DEPARTAMENTO);
@@ -48,52 +92,79 @@ public class EnviaEmailService implements EmailService {
             List<String> destinatarios = usuariosCompradores.stream()
                     .map(Usuario::getEmail)
                     .filter(email -> email != null && !email.trim().isEmpty())
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (destinatarios.isEmpty()) {
                 return "Usuários com perfil COMPRADOR encontrados, mas nenhum e-mail válido";
             }
 
             // Carregar o template HTML
-            String templateContent = new String(Files.readAllBytes(
-                    Paths.get(getClass().getResource("/email_templates/email-solicitacao-compra.html").toURI())
-            ));
+            String template = carregarTemplate("email-solicitacao-compra.html");
 
-            // Preencher o template com os dados
-            String message = templateContent
-                    .replace("{{solicitante}}", solicitacaoCompraDto.getSolicitante())
-                    .replace("{{dataSolicitacao}}", solicitacaoCompraDto.getDataSolicitacao().format(formatter))
-                    .replace("{{departamento}}", solicitacaoCompraDto.getDepartamento())
-                    .replace("{{centroCusto}}", solicitacaoCompraDto.getCentroCusto())
-                    .replace("{{motivoCompra}}", solicitacaoCompraDto.getMotivoCompra())
-                    .replace("{{urgente}}", solicitacaoCompraDto.getUrgente());
-
-            // Remover seção urgente se não for urgente
-            if (!Boolean.parseBoolean(solicitacaoCompraDto.getUrgente())) {
-                message = message.replace("{{#urgente}}", "").replace("{{/urgente}}", "");
+            if (solicitacaoCompraDto.getDataSolicitacao() != null) {
+                try {
+                    SimpleDateFormat inputFormat = new SimpleDateFormat("yyyy-MM-dd");
+                    SimpleDateFormat outputFormat = new SimpleDateFormat("dd/MM/yyyy");
+                    Date data = inputFormat.parse(solicitacaoCompraDto.getDataSolicitacao().toString());
+                    dataFormatada = outputFormat.format(data);
+                } catch (Exception e) {
+                    logger.warn("Erro ao formatar data, usando valor original: {}", e.getMessage());
+                    dataFormatada = solicitacaoCompraDto.getDataSolicitacao().toString();
+                }
             }
 
-            String subject = "📦 Solicitação de Compra #" + solicitacaoCompraDto.getId() + " - " + solicitacaoCompraDto.getSolicitante();
+            // Preparar variáveis (fazemos isso uma vez só)
+            Map<String, Object> variaveis = new HashMap<>();
+            variaveis.put("{{solicitante}}", solicitacaoCompraDto.getSolicitante());
+            variaveis.put("{{dataSolicitacao}}", dataFormatada);
+            variaveis.put("{{departamento}}", solicitacaoCompraDto.getDepartamento());
+            variaveis.put("{{centroCusto}}", solicitacaoCompraDto.getCentroCusto());
+            variaveis.put("{{motivoCompra}}", solicitacaoCompraDto.getMotivoCompra());
+            // Remova completamente a lógica de blocos condicionais
+            variaveis.put("urgente", Boolean.parseBoolean(solicitacaoCompraDto.getUrgente()) ? "URGENTE" : "");
 
-            // Criar mensagem MIME
-            MimeMessage mimeMessage = javaMailSender.createMimeMessage();
-            MimeMessageHelper helper = new MimeMessageHelper(mimeMessage, true, "UTF-8");
+            // Processar template (fazemos isso uma vez só)
+            String message = processarTemplate(template, variaveis);
 
-            helper.setFrom(remetente);
-            helper.setTo(destinatarios.toArray(new String[0]));
-            helper.setSubject(subject);
-            helper.setText(message, true);
+            for (String destinatario : destinatarios) {
+                try {
+                    logger.debug("Preparando email para: {}", destinatario);
 
-            // Adicionar imagem da assinatura
-            //ClassPathResource imageResource = new ClassPathResource("/templates/assinatura_ti.png");
-            //helper.addInline("assinaturaImagem", imageResource);
+                    // Criando uma mensagem MIME para cada destinatário
+                    MimeMessage mimeMessage = javaMailSender.createMimeMessage();
+                    MimeMessageHelper helper = new MimeMessageHelper(mimeMessage, true, "UTF-8");
+                    helper.setFrom(remetente);
+                    helper.setTo(destinatario); // Apenas UM destinatário por vez
+                    helper.setSubject(subject);
+                    helper.setText(message, true);
 
-            javaMailSender.send(mimeMessage);
-            return "E-mail enviado com sucesso para " + destinatarios;
+                    // Carregando a imagem da assinatura
+                    //ClassPathResource imageResource = new ClassPathResource("/templates/assinatura_ti.png");
+                    //helper.addInline("assinaturaImagem", imageResource);
+
+                    logger.debug("Enviando email para: {}", destinatario);
+                    javaMailSender.send(mimeMessage);
+
+                    emailsEnviados++;
+                    logger.info("Email enviado com sucesso para: {}", destinatario);
+
+                } catch (Exception e) {
+                    emailsComErro++;
+                    logger.error("ERRO ao enviar e-mail para {}: {}", destinatario, e.getMessage(), e);
+                    resultado.append("Erro para ").append(destinatario).append(": ").append(e.getMessage()).append("; ");
+                }
+            }
+
+            // Resultado final
+            if (emailsComErro == 0) {
+                return "Todos os " + emailsEnviados + " e-mails enviados com sucesso";
+            } else {
+                return emailsEnviados + " e-mails enviados, " + emailsComErro + " com erro. Detalhes: " + resultado.toString();
+            }
 
         } catch (Exception e) {
-            log.error("Erro ao enviar e-mail: {}", e.getMessage(), e);
-            return "Erro ao enviar e-mail: " + e.getMessage();
+            logger.error("ERRO geral no processamento do email: {}", e.getMessage(), e);
+            return "Erro geral ao processar e-mail: " + e.getMessage();
         }
     }
 }
